4. JavaScript/lecture/core/examples/9.Modules/1_sample/1_modules.js
import {color, name, sum, Rectangle, multiply} from "./module"
console.log(color);
console.log(name);
console.log(sum);
console.log(Rectangle);
console.log(multiply);

//    error
//    import {subtract} from "module.js"
//    console.log(subtract);
